<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/action_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home"
            android:checked="true"/>
    <item
            android:id="@+id/action_users"
            android:icon="@drawable/ic_people"
            android:title="@string/menu_users"/>
    <item
            android:id="@+id/action_camera"
            android:icon="@drawable/ic_camera"
            android:title="@string/menu_camera"/>
    <item
            android:id="@+id/action_fire"
            android:icon="@drawable/ic_fire"
            android:title="@string/menu_fire"/>
    <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings"/>
</menu>